--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <footer>
                 <a href="https://oxygemo.github.io">Made by Odyssey346, check out his website for more</a>
                 |
-                <a href="https://github.com/Oxygemo/local-youtube-downloader-plus">source code for both the userscript and the website</a>
+                <a href="https://github.com/Oxygemo/local-youtube-downloader-plus/tree/gh-pages">source code for the website</a>
             </footer>
         </div>
     </body>
